2001-07-25  H.J. Lu <hjl@gnu.org>

	* configure.target (cpu_include_dir): Set to `config/cpu/mips'
	for mips.

	* config/cpu/mips/bits/atomicity.h: New.

2001-07-25  Gabriel Dos Reis  <gdr@merlin.codesourcery.com>

	* acinclude.m4: CHECK_MATH_DECL_AND_LINKAGE for hypot, hypotf,
	hypotl, atan2f, atan2l.  Remove from REPLACE_MATHFUNCS list.
	* aclocal.m4: Regenerate.
	* config.h.in: Likewise.
	* configure: Likewise.
	* libmath/Makefile.am (EXTRA_LONG_DOUBLE_yes): Remove hypotl.c
	(EXTRA_DIST): Remove hypot.c hypotf.c.
	* libmath/Makefile.am: Regenerate.
	* libmath/hypotf.c: Remove.
	* libmath/hypot.c: Likewise.
	* libmath/hypotl.c: Likewise.
	* libmath/stubs.c: The macros seen here are HAVE_xxx, not
	_GLIBCPP_HAVE_xxx.  Add long double versions.

2001-07-23  David Edelsohn  <edelsohn@gnu.org>

	* include/bits/limits_generic.h (int): Set digits and digits10
	appropriately for word size.
	(unsigned int,long,unsigned long): Likewise.

2001-07-19  Peter Schmid  <schmid@snake.iap.physik.tu-darmstadt.de>

        * include/bits/stl_algo.h : Fix typos.
	* testsuite/25_algorithms/unique.cc: New file.
	
2001-07-19  Phil Edwards  <pme@sources.redhat.com>
            Mark Mitchell <mark@codesourcery.com>

	Merge from cp-parser-branch.
	* include/bits/basic_string.h:  Qualify symbols with 'template'.
	* include/bits/basic_string.tcc:  Likewise.
	* include/bits/fstream.tcc:  Likewise.
	* include/bits/istream.tcc:  Likewise.
	* include/bits/sstream.tcc:  Likewise.
	* include/bits/std_istream.h:  Likewise.
	* include/bits/stl_iterator.h:  Likewise.
	* include/bits/streambuf.tcc:  Likewise.
	* src/gen-num-limits.cc:  Add 'template<>' to specializations.
	* src/locale.cc:  Likewise.

2001-07-19  Gabriel Dos Reis  <gdr@merlin.codesourcery.com>
	    Bert De Knuydt <Bert.Deknuydt@esat.kuleuven.ac.be>

	* src/gen-num-limits.cc (set_signals_handler): New function.
	Factor out signals setting.  Set signal handler for SIGILL.

2001-07-18  Phil Edwards  <pme@sources.redhat.com>
